moved templates from code to folder, now you can substitute own templates
