# swagger.yaml
@@ -4,10 +4,97 @@ info:
   description: ""
   version: ""
 paths:
+  /api/v1/branches:
+    get:
+      tags:
+      - s3/Service
+      parameters:
+      - in: header
+        name: authToken
+        schema:
+          type: string
+          nullable: true
+      - in: cookie
+        name: supplierID
+        schema:
+          type: string
+          nullable: true
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  branches:
+                    type: array
+                    items:
+                      type: number
+  /api/v1/doc/{bucket}/{key}:
+    get:
+      tags:
+      - s3/Service
+      parameters:
+      - in: path
+        name: bucket
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: key
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  document:
+                    type: array
+                    items:
+                      type: string
+                      format: byte
+    post:
+      tags:
+      - s3/Service
+      parameters:
+      - in: path
+        name: bucket
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: key
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          "":
+            schema:
+              type: object
+              properties:
+                document:
+                  type: array
+                  items:
+                    type: string
+                    format: byte
+      responses:
+        "201":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
   /api/v1/document:
     post:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: header
         name: token
@@ -24,7 +111,6 @@ paths:
                   type: string
                 contractID:
                   type: boolean
-                  nullable: true
                 data:
                   type: string
                   format: binary
@@ -49,7 +135,7 @@ paths:
   /api/v1/file:
     get:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: header
         name: token
@@ -60,7 +146,7 @@ paths:
         "200":
           description: ""
           content:
-            application/vnd.openxmlformats-officedocument.spreadsheetml.sheet:
+            "":
               schema:
                 type: object
                 properties:
@@ -69,7 +155,7 @@ paths:
   /api/v1/getWarehouses:
     get:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: header
         name: token
@@ -86,10 +172,115 @@ paths:
                 properties:
                   "":
                     type: object
+  /api/v1/multipart/{bucket}/{key}:
+    post:
+      tags:
+      - s3/Service
+      parameters:
+      - in: path
+        name: bucket
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: key
+        required: true
+        schema:
+          type: string
+      responses:
+        "201":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  additionalErrors:
+                    type: object
+                    properties:
+                      lastName:
+                        type: string
+                      name:
+                        type: string
+                    nullable: true
+                  data:
+                    type: object
+                    properties:
+                      upload_id:
+                        type: string
+                  error:
+                    type: boolean
+                  errorText:
+                    type: string
+    patch:
+      tags:
+      - s3/Service
+      parameters:
+      - in: path
+        name: bucket
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: key
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          "":
+            schema:
+              type: object
+              properties:
+                document:
+                  type: array
+                  items:
+                    type: string
+                    format: byte
+                partNumber:
+                  type: number
+                uploadID:
+                  type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+    put:
+      tags:
+      - s3/Service
+      parameters:
+      - in: path
+        name: bucket
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: key
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          "":
+            schema:
+              type: object
+              properties:
+                uploadID:
+                  type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
   /api/v1/namespaces/{namespace}/details-embed-array/{detail}:
     get:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: path
         name: namespace
@@ -126,7 +317,7 @@ paths:
   /api/v1/namespaces/{namespace}/details-embed/{detail}:
     get:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: path
         name: namespace
@@ -169,7 +360,7 @@ paths:
   /api/v1/namespaces/{namespace}/details/{detail}:
     get:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: path
         name: namespace
@@ -215,7 +406,7 @@ paths:
                 nullable: true
     put:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: path
         name: namespace
@@ -280,7 +471,7 @@ paths:
   /api/v1/someelsedata:
     get:
       tags:
-      - C:\Users\spiri\Documents\go-transport-generator\example\service/SomeService
+      - service/SomeService
       parameters:
       - in: header
         name: token
@@ -310,3 +501,35 @@ paths:
                   id:
                     type: string
                     nullable: true
+  /token:
+    post:
+      tags:
+      - s3/Service
+      parameters:
+      - in: header
+        name: authToken
+        schema:
+          type: string
+          nullable: true
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                grantType:
+                  type: string
+                scope:
+                  type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  expiresIn:
+                    type: number
+                  token:
+                    type: string
